week2/ex3/ex3Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF
   2       | expr SEMI

   3  command : expr SEMI
   4          | LET var EQ expr SEMI
   5          | LET REC var EQ FUN var ARROW expr SEMI

   6  expr : LET var EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | expr EQ expr
  10       | expr LT expr
  11       | expr PLUS expr
  12       | expr MINUS expr
  13       | expr TIMES expr
  14       | expr DIV expr
  15       | FUN var ARROW expr
  16       | expr apply_expr
  17       | MATCH expr WITH pattern_expr END
  18       | apply_expr

  19  pattern_expr : pattern ARROW expr
  20               | pattern ARROW expr OR pattern_expr

  21  pattern : INT
  22          | BOOL
  23          | ID

  24  apply_expr : INT
  25             | BOOL
  26             | ID
  27             | LPAR expr RPAR

  28  var : ID

  29  %entry% : '\001' main
  30          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (29)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	main  goto 12
	expr  goto 13
	apply_expr  goto 14


state 2
	%entry% : '\002' . command  (30)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 15
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	command  goto 16
	expr  goto 17
	apply_expr  goto 14


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (24)

	.  reduce 24


state 5
	apply_expr : BOOL .  (25)

	.  reduce 25


state 6
	apply_expr : ID .  (26)

	.  reduce 26


state 7
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 18
	REC  shift 19
	.  error

	var  goto 20


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 21
	apply_expr  goto 14


state 9
	apply_expr : LPAR . expr RPAR  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 22
	apply_expr  goto 14


state 10
	expr : FUN . var ARROW expr  (15)

	ID  shift 18
	.  error

	var  goto 23


state 11
	expr : MATCH . expr WITH pattern_expr END  (17)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 24
	apply_expr  goto 14


state 12
	%entry% : '\001' main .  (29)

	.  reduce 29


state 13
	main : expr . EOF  (1)
	main : expr . SEMI  (2)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	SEMI  shift 31
	EOF  shift 32
	.  error

	apply_expr  goto 33


state 14
	expr : apply_expr .  (18)

	.  reduce 18


state 15
	command : LET . var EQ expr SEMI  (4)
	command : LET . REC var EQ FUN var ARROW expr SEMI  (5)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 18
	REC  shift 34
	.  error

	var  goto 35


state 16
	%entry% : '\002' command .  (30)

	.  reduce 30


state 17
	command : expr . SEMI  (3)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	SEMI  shift 36
	.  error

	apply_expr  goto 33


state 18
	var : ID .  (28)

	.  reduce 28


state 19
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 18
	.  error

	var  goto 37


state 20
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 38
	.  error


state 21
	expr : IF expr . THEN expr ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	THEN  shift 39
	LPAR  shift 9
	.  error

	apply_expr  goto 33


state 22
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	apply_expr : LPAR expr . RPAR  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	RPAR  shift 40
	.  error

	apply_expr  goto 33


state 23
	expr : FUN var . ARROW expr  (15)

	ARROW  shift 41
	.  error


state 24
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	expr : MATCH expr . WITH pattern_expr END  (17)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	WITH  shift 42
	.  error

	apply_expr  goto 33


state 25
	expr : expr PLUS . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 43
	apply_expr  goto 14


state 26
	expr : expr MINUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 44
	apply_expr  goto 14


state 27
	expr : expr TIMES . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 45
	apply_expr  goto 14


state 28
	expr : expr DIV . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 46
	apply_expr  goto 14


state 29
	expr : expr EQ . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 47
	apply_expr  goto 14


state 30
	expr : expr LT . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 48
	apply_expr  goto 14


state 31
	main : expr SEMI .  (2)

	.  reduce 2


state 32
	main : expr EOF .  (1)

	.  reduce 1


state 33
	expr : expr apply_expr .  (16)

	.  reduce 16


state 34
	command : LET REC . var EQ FUN var ARROW expr SEMI  (5)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 18
	.  error

	var  goto 49


state 35
	command : LET var . EQ expr SEMI  (4)
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 50
	.  error


state 36
	command : expr SEMI .  (3)

	.  reduce 3


state 37
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 18
	.  error

	var  goto 51


state 38
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 52
	apply_expr  goto 14


state 39
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 53
	apply_expr  goto 14


state 40
	apply_expr : LPAR expr RPAR .  (27)

	.  reduce 27


state 41
	expr : FUN var ARROW . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 54
	apply_expr  goto 14


state 42
	expr : MATCH expr WITH . pattern_expr END  (17)

	INT  shift 55
	BOOL  shift 56
	ID  shift 57
	.  error

	pattern_expr  goto 58
	pattern  goto 59


state 43
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr PLUS expr .  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 27
	DIV  shift 28
	LPAR  shift 9
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11

	apply_expr  goto 33


state 44
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr MINUS expr .  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 27
	DIV  shift 28
	LPAR  shift 9
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12

	apply_expr  goto 33


state 45
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr TIMES expr .  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	TIMES  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13

	apply_expr  goto 33


state 46
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr DIV expr .  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 9
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14

	apply_expr  goto 33


state 47
	expr : expr . EQ expr  (9)
	expr : expr EQ expr .  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	LPAR  shift 9
	IN  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	WITH  reduce 9
	OR  reduce 9
	END  reduce 9
	SEMI  reduce 9
	EOF  reduce 9

	apply_expr  goto 33


state 48
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr LT expr .  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	LPAR  shift 9
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10

	apply_expr  goto 33


state 49
	command : LET REC var . EQ FUN var ARROW expr SEMI  (5)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 18
	EQ  shift 60
	.  error

	var  goto 51


state 50
	command : LET var EQ . expr SEMI  (4)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 61
	apply_expr  goto 14


state 51
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 62
	.  error


state 52
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 63
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	.  error

	apply_expr  goto 33


state 53
	expr : IF expr THEN expr . ELSE expr  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	ELSE  shift 64
	LPAR  shift 9
	.  error

	apply_expr  goto 33


state 54
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : FUN var ARROW expr .  (15)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	WITH  reduce 15
	OR  reduce 15
	END  reduce 15
	SEMI  reduce 15
	EOF  reduce 15

	apply_expr  goto 33


state 55
	pattern : INT .  (21)

	.  reduce 21


state 56
	pattern : BOOL .  (22)

	.  reduce 22


state 57
	pattern : ID .  (23)

	.  reduce 23


state 58
	expr : MATCH expr WITH pattern_expr . END  (17)

	END  shift 65
	.  error


state 59
	pattern_expr : pattern . ARROW expr  (19)
	pattern_expr : pattern . ARROW expr OR pattern_expr  (20)

	ARROW  shift 66
	.  error


state 60
	command : LET REC var EQ . FUN var ARROW expr SEMI  (5)

	FUN  shift 67
	.  error


state 61
	command : LET var EQ expr . SEMI  (4)
	expr : LET var EQ expr . IN expr  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 63
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	SEMI  shift 68
	.  error

	apply_expr  goto 33


state 62
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 69
	apply_expr  goto 14


state 63
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 70
	apply_expr  goto 14


state 64
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 71
	apply_expr  goto 14


state 65
	expr : MATCH expr WITH pattern_expr END .  (17)

	.  reduce 17


state 66
	pattern_expr : pattern ARROW . expr  (19)
	pattern_expr : pattern ARROW . expr OR pattern_expr  (20)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 72
	apply_expr  goto 14


state 67
	command : LET REC var EQ FUN . var ARROW expr SEMI  (5)

	ID  shift 18
	.  error

	var  goto 73


state 68
	command : LET var EQ expr SEMI .  (4)

	.  reduce 4


state 69
	expr : LET REC var var EQ expr . IN expr  (7)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	IN  shift 74
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	.  error

	apply_expr  goto 33


state 70
	expr : LET var EQ expr IN expr .  (6)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	WITH  reduce 6
	OR  reduce 6
	END  reduce 6
	SEMI  reduce 6
	EOF  reduce 6

	apply_expr  goto 33


state 71
	expr : IF expr THEN expr ELSE expr .  (8)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	WITH  reduce 8
	OR  reduce 8
	END  reduce 8
	SEMI  reduce 8
	EOF  reduce 8

	apply_expr  goto 33


state 72
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)
	pattern_expr : pattern ARROW expr .  (19)
	pattern_expr : pattern ARROW expr . OR pattern_expr  (20)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	OR  shift 75
	END  reduce 19

	apply_expr  goto 33


state 73
	command : LET REC var EQ FUN var . ARROW expr SEMI  (5)

	ARROW  shift 76
	.  error


state 74
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 77
	apply_expr  goto 14


state 75
	pattern_expr : pattern ARROW expr OR . pattern_expr  (20)

	INT  shift 55
	BOOL  shift 56
	ID  shift 57
	.  error

	pattern_expr  goto 78
	pattern  goto 59


state 76
	command : LET REC var EQ FUN var ARROW . expr SEMI  (5)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	.  error

	expr  goto 79
	apply_expr  goto 14


state 77
	expr : LET REC var var EQ expr IN expr .  (7)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	WITH  reduce 7
	OR  reduce 7
	END  reduce 7
	SEMI  reduce 7
	EOF  reduce 7

	apply_expr  goto 33


state 78
	pattern_expr : pattern ARROW expr OR pattern_expr .  (20)

	.  reduce 20


state 79
	command : LET REC var EQ FUN var ARROW expr . SEMI  (5)
	expr : expr . EQ expr  (9)
	expr : expr . LT expr  (10)
	expr : expr . PLUS expr  (11)
	expr : expr . MINUS expr  (12)
	expr : expr . TIMES expr  (13)
	expr : expr . DIV expr  (14)
	expr : expr . apply_expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 25
	MINUS  shift 26
	TIMES  shift 27
	DIV  shift 28
	EQ  shift 29
	LT  shift 30
	LPAR  shift 9
	SEMI  shift 80
	.  error

	apply_expr  goto 33


state 80
	command : LET REC var EQ FUN var ARROW expr SEMI .  (5)

	.  reduce 5


29 terminals, 9 nonterminals
31 grammar rules, 81 states
